# mygeopy

./: .gitignore  pyproject.toml
.github/workflows/: python-app.yml
mygeopy/: triangle.py
tests/: test_triangle.py
